Fixed centered components alignment.

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -5,7 +5,7 @@
 .header {
     position: relative;
     background-color: white;
-    // max-height: 50vh;
+    //max-height: 50vh;
 }
 
 .top-padding {
@@ -15,7 +15,7 @@
 .logo {
     margin: em(3) 0;
     text-align: center;
-    height: em(140);
+    //height: em(140);
     img {
         width: em(140);
         height: em(140);
@@ -60,6 +60,7 @@
     margin-top: em(-280);
     height: em(420);
     background-image: url("/assets/images/app/pattern_witchery.png");
+    background-size: em(960) em(225);
 }
 
 .content-title {
